--- a/index.html
+++ b/index.html
@@ -37,10 +37,11 @@
                     <div class="col-sm-12 col-md-3 mt-5">
                         <img class src="assets/images/Final_Fantasy_VII_Logo.png"></img>
                         <p class="display-4 text-center m-2">HANGMAN</p>
+                        <p class="display-4 text-center" id="correctAnswer"></p>
                     </div>
             </div>
             <div class = "row">
-                <div class="col-md-2"></div>
+                <div class="col-md-1"></div>
                 <div class="col-sm-12 col-md-6">  
                     <ul id="spaces" class="list-unstyled"></ul>
                 </div>
